Change the backoffice to have collections on groups
